crates/elenchus-parser/tests/snapshots/errors__trailing_garbage_after_valid_program.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(r#\"\n        FACT a b\n        CHECK a\n        ??? leftover\n        \"#)"
---
Syntax Error at line 4, col 1: expected a statement (IMPORT/FACT/NOT/ASSUME/PREMISE/RULE/CHECK)
  |         ??? leftover
  | ^--- here
